{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 217,
  "lineage": "d262ba0e-6151-19df-8674-a1ff77f0a83d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421750533005:vpc/vpc-9dced7f5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-aab9a2c2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8d9361e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-9dced7f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f4f3529f",
            "owner_id": "421750533005",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c1fa8df71875112",
            "arn": "arn:aws:ec2:us-east-2:421750533005:instance/i-0414b26c924761393",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "web_rds",
            "id": "i-0414b26c924761393",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-app-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8587d95e41b0444",
            "private_dns": "ip-172-31-2-35.us-east-2.compute.internal",
            "private_ip": "172.31.2.35",
            "public_dns": "ec2-3-15-214-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.214.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e994f9824c70f93c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh_http"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e3fdfc8b",
            "tags": {
              "Name": "App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03407443c92fa356e"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.web_rds",
            "aws_security_group.app_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:loadbalancer/app/main/2ddc63204bf82e67",
            "arn_suffix": "app/main/2ddc63204bf82e67",
            "dns_name": "main-1953012455.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:421750533005:loadbalancer/app/main/2ddc63204bf82e67",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main",
            "security_groups": [
              "sg-0dad201bc9f599211"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-44c2bd3e"
              },
              {
                "subnet_id": "subnet-868523ca"
              },
              {
                "subnet_id": "subnet-e3fdfc8b"
              }
            ],
            "subnets": [
              "subnet-44c2bd3e",
              "subnet-868523ca",
              "subnet-e3fdfc8b"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-9dced7f5",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.lb_sg",
            "data.aws_subnet_ids.main_vpc_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:listener/app/main/2ddc63204bf82e67/25f3ee628d2aa2f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421750533005:listener/app/main/2ddc63204bf82e67/25f3ee628d2aa2f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:loadbalancer/app/main/2ddc63204bf82e67",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:listener/app/main/2ddc63204bf82e67/6f1bb7d6827a1941",
            "certificate_arn": "arn:aws:acm:us-east-2:421750533005:certificate/63e6d6a0-754e-482d-bffb-48d751a5e709",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:targetgroup/web/61a82a6ecbbae77d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421750533005:listener/app/main/2ddc63204bf82e67/6f1bb7d6827a1941",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:loadbalancer/app/main/2ddc63204bf82e67",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_acm_certificate.cert",
            "aws_lb.main",
            "aws_lb_target_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:targetgroup/web/61a82a6ecbbae77d",
            "arn_suffix": "targetgroup/web/61a82a6ecbbae77d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:421750533005:targetgroup/web/61a82a6ecbbae77d",
            "lambda_multi_value_headers_enabled": false,
            "name": "web",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-9dced7f5"
          },
          "depends_on": [
            "data.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "main_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:421750533005:targetgroup/web/61a82a6ecbbae77d-20190925124720447700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:421750533005:targetgroup/web/61a82a6ecbbae77d",
            "target_id": "i-0414b26c924761393"
          },
          "depends_on": [
            "aws_instance.web",
            "aws_lb_target_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421750533005:security-group/sg-03407443c92fa356e",
            "description": "For web and ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03407443c92fa356e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh_http",
            "name_prefix": null,
            "owner_id": "421750533005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-9dced7f5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:421750533005:security-group/sg-0dad201bc9f599211",
            "description": "For web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dad201bc9f599211",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": null,
            "owner_id": "421750533005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-9dced7f5"
          }
        }
      ]
    }
  ]
}